# go-memcached

./: BUILD.bazel  WORKSPACE  build.star  client.go  client_test.go  debug.yaml  debug_singlepool.yaml  go.mod  go.sum
client/: BUILD.bazel  client.go  client_test.go  ring.go  ring_test.go  server.go  server_test.go
cluster/: BUILD.bazel  cluster.go  cluster_test.go  single_pool.go
cmd/router/: BUILD.bazel  main.go
errors/: BUILD.bazel
proxy/: BUILD.bazel  replica_pool.go
server/: BUILD.bazel  server.go  server_test.go
testutil/: BUILD.bazel  process.go
