load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix go.f110.dev/go-memcached
gazelle(name = "gazelle")

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

configure_make(
    name = "libevent",
    configure_options = [
        "--enable-shared=no",
        "--disable-libevent-regress",
        "--disable-openssl",
    ],
    lib_source = "@libevent//:all",
)

configure_make(
    name = "memcached",
    install_prefix = "build",
    lib_source = "@memcached//:all",
    out_binaries = ["memcached"],
    deps = ["libevent"],
)
