load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix go.f110.dev/go-memcached
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-prune",
    ],
    command = "update-repos",
)

load("@rules_foreign_cc//foreign_cc:defs.bzl", "configure_make")

configure_make(
    name = "libevent",
    configure_options = [
        "--enable-shared=no",
        "--disable-libevent-regress",
        "--disable-openssl",
        "AR=\"\"",
    ],
    lib_source = "@libevent//:all",
)

configure_make(
    name = "memcached",
    configure_options = [
        "CXXFLAGS=\"\"",
        "CFLAGS=\"\"",
    ],
    install_prefix = "install",
    lib_source = "@memcached//:all",
    out_binaries = ["memcached"],
    out_include_dir = "",
    visibility = ["//visibility:public"],
    deps = ["libevent"],
)
