load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "go_default_library",
    srcs = ["cluster.go"],
    importpath = "go.f110.dev/go-memcached/cluster",
    visibility = ["//visibility:public"],
    deps = ["//client:go_default_library"],
)

go_test(
    name = "go_default_test",
    srcs = ["cluster_test.go"],
    embed = [":go_default_library"],
    deps = [
        "//client:go_default_library",
        "//testutil:go_default_library",
    ],
)
