load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "go_default_library",
    srcs = ["main.go"],
    importpath = "go.f110.dev/go-memcached/cmd/router",
    visibility = ["//visibility:private"],
    deps = [
        "//client:go_default_library",
        "//cluster:go_default_library",
        "//proxy:go_default_library",
        "//server:go_default_library",
        "@io_k8s_sigs_yaml//:go_default_library",
    ],
)

go_binary(
    name = "router",
    embed = [":go_default_library"],
    visibility = ["//visibility:public"],
)
